# warehouse-digital-twin-opsbrain

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py  ui.py
app/pages/: 1_Executive_Overview.py  2_Forecasting.py  3_Dock_Optimization.py  4_Labor_Planning.py  5_Simulation_Scenario_Lab.py  6_Bottleneck_Analysis.py  7_Recommendations.py  8_Data_Explorer.py  9_Scenario_Comparison.py
docs/: architecture.md  demo_walkthrough.md  repo_metadata.md  results_snapshot.md
scripts/: build_demo_report.py  generate_demo_data.py  generate_showcase_assets.py  run_mvp.py
src/: __init__.py
src/analytics/: __init__.py  kpis.py
src/config/: settings.py
src/data/: __init__.py  generator.py  pipeline.py  schemas.py
src/database/: sqlite_store.py
src/features/: __init__.py  engineering.py
src/forecasting/: __init__.py  engine.py  metrics.py
src/optimization/: __init__.py  dock_scheduler.py
src/recommendations/: engine.py
src/simulation/: __init__.py  digital_twin.py
src/utils/: demo.py  io.py
tests/: test_comparison.py  test_forecasting.py  test_generator.py  test_optimization.py  test_simulation.py  test_sqlite_store.py
