[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hvdc-opsbrain"
version = "0.1.0"
description = "Warehouse digital twin and decision intelligence platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "statsmodels>=0.14",
  "ortools>=9.10",
  "simpy>=4.1",
  "plotly>=6.0",
  "streamlit>=1.44",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "pytest>=8.2",
]

[project.optional-dependencies]
dev = [
  "black>=24.4",
  "ruff>=0.5",
  "isort>=5.13",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["src*", "app*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
